// Vitest Snapshot v1

exports[`Button > should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="css-t79x31-StyledButton egl9i9v0"
  />
</DocumentFragment>
`;

exports[`IconComponent > should match the snapshot for the given props 1`] = `
<DocumentFragment>
  <button
    class="css-t79x31-StyledButton e138pvrm0"
  />
</DocumentFragment>
`;
